# visualboyadvance

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2TTF.cmake  GResource.cmake
data/: GamesDB.txt  game-db.xml  game-db.xsd
data/db/: game-db.xml  game-db.xsd
data/gtk/: gvbam.desktop  org.vba.ttb.gresource.xml  org.vba.ttb.gschema.xml
data/gtk/ui/: display.ui  joypad.glade  settings.glade  settings.ui  vbam.glade
data/sdl/: vba.desktop
doc/: License.txt
src/: System.h  Util.cpp  Util.h
src/apu/: Gb_Apu.h  Gb_Oscs.h  Multi_Buffer.cpp  Multi_Buffer.h  blargg_common.h
src/common/: DisplayDriver.c  DisplayDriver.h  GameDB.c  GameDB.cpp  GameDB.h  GameInfos.c  GameInfos.h  GameXml.cpp  GameXml.h  InputDriver.c  InputDriver.h  Loader.c  Loader.h  Port.h  RingBuffer.c  RingBuffer.h  Settings.c  Settings.h  SoundDriver.c  SoundDriver.h  SoundSDL.cpp  SoundSDL.h  Util.c  Util.cpp  Util.h
src/gba/: CPU.cpp  CPU.h  CPUArm.cpp  CPUThumb.cpp  Cartridge.c  Cartridge.cpp  Cartridge.h  CartridgeEEprom.c  CartridgeEEprom.cpp  CartridgeFlash.c  CartridgeFlash.cpp  CartridgeFlash.h  CartridgeRTC.c  CartridgeRTC.cpp  CartridgeRTC.h  CartridgeSram.c  CartridgeSram.cpp  CartridgeSram.h  Display.c  Display.cpp  Display.h  EEprom.cpp  EEprom.h  Flash.cpp  Flash.h  GBA-arm.cpp  GBA-thumb.cpp  GBA.cpp  GBA.h  GBAGfx.cpp  GBAGfx.h  GBALink.cpp  GBALink.h  GBAcpu.h  GBAinline.h  GameInfos.cpp  GameInfos.h  Gfx.c  Gfx.cpp  Gfx.h  (+36 more)
src/gtk/: ConfigFile.cpp  ConfigFile.h  GameXml.cpp  GameXml.h  InputSDL.cpp  InputSDL.h  Intl.h  JoypadConfigDialog.cpp  JoypadConfigDialog.h  Main.cpp  ScreenArea.cpp  ScreenArea.h  ScreenAreaCairo.cpp  ScreenAreaCairo.h  ScreenAreaOpenGL.cpp  ScreenAreaOpenGL.h  SettingsDialog.cpp  SettingsDialog.h  System.cpp  Tools.cpp  Tools.h  Window.cpp  Window.h  WindowCallbacks.cpp  directoriesconfig.cpp  directoriesconfig.h  displayconfig.cpp  displayconfig.h  filters.cpp  filters.h  gameboyadvanceconfig.cpp  gameboyadvanceconfig.h  joypadconfig.cpp  joypadconfig.h  main.cpp  screenarea-cairo.cpp  screenarea-opengl.cpp  screenarea-opengl.h  screenarea.cpp  screenarea.h  (+7 more)
src/gtk/ui/: gameboyadvance.ui  vbam.glade
src/sdl/: DisplaySDL.c  DisplaySDL.cpp  DisplaySDL.h  ErrorScreen.c  ErrorScreen.h  GUI.c  GUI.h  GameScreen.c  GameScreen.cpp  GameScreen.h  InputSDL.c  InputSDL.h  OSD.c  OSD.h  PauseScreen.c  PauseScreen.h  SDL.cpp  SoundSDL.c  SoundSDL.h  Timer.c  Timer.h  VBA.cpp  VBA.h  text.c  text.cpp  text.h
